[gd_scene load_steps=6 format=3 uid="uid://dfkppnjr8whxq"]

[ext_resource type="Script" path="res://prog_54b.gd" id="1_m2g3a"]

[sub_resource type="LabelSettings" id="LabelSettings_rjxdb"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_lv6c0"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_prf4y"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_fcnjw"]
font_size = 40

[node name="Prog54b" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m2g3a")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 310.0
offset_bottom = 113.0
text = "Num1:"
label_settings = SubResource("LabelSettings_rjxdb")
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 117.0
offset_right = 312.0
offset_bottom = 230.0
text = "Num2:"
label_settings = SubResource("LabelSettings_lv6c0")
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_top = 244.0
offset_right = 310.0
offset_bottom = 357.0
text = "Num3:"
label_settings = SubResource("LabelSettings_prf4y")
vertical_alignment = 1

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 366.0
offset_right = 313.0
offset_bottom = 479.0
text = "Num4:"
label_settings = SubResource("LabelSettings_fcnjw")
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 295.0
offset_top = 2.0
offset_right = 638.0
offset_bottom = 97.0

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 290.0
offset_top = 137.0
offset_right = 633.0
offset_bottom = 232.0

[node name="LineEdit3" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 293.0
offset_top = 265.0
offset_right = 636.0
offset_bottom = 360.0

[node name="LineEdit4" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 290.0
offset_top = 375.0
offset_right = 633.0
offset_bottom = 470.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 525.0
offset_right = 205.0
offset_bottom = 645.0
text = "Calculate"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 468.0
offset_top = 525.0
offset_right = 670.0
offset_bottom = 645.0
text = "Clear
"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 951.0
offset_top = 523.0
offset_right = 1153.0
offset_bottom = 643.0
text = "Exit"

[node name="Label5" type="Label" parent="."]
layout_mode = 0
offset_left = 666.0
offset_top = 3.0
offset_right = 1143.0
offset_bottom = 162.0

[node name="Label6" type="Label" parent="."]
layout_mode = 0
offset_left = 668.0
offset_top = 181.0
offset_right = 1145.0
offset_bottom = 340.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
